--- a/.npmignore
+++ b/.npmignore
@@ -1,16 +1,5 @@
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-node_modules
-*.local
-
-.github/*
-.vscode/*
-.idea
-.DS_Store
-
-yarn.lock
-package-lock.json
+.*
+!dist
+!index.js
+!README.md
+!LICENSE
