--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@emravoan/konloader",
-  "version": "1.0.1",
-  "description": "Flash and Loading Screen",
+  "version": "2.0.0",
+  "description": "Simple JS Loader",
   "author": "EM Ravoan",
   "license": "MIT",
   "scripts": {
@@ -9,11 +9,11 @@
     "watch": "rollup --config --configPlugin typescript -w"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^8.3.4",
     "@types/node": "^18.7.8",
-    "autoprefixer": "^10.4.8",
     "esbuild": "^0.15.7",
-    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "rollup": "^2.78.1",
     "rollup-plugin-copy-assets": "^2.0.3",
